Add new layout component for header

--- a/src/shared/layout/baseBackground/style.module.css
+++ b/src/shared/layout/baseBackground/style.module.css
@@ -1,5 +1,5 @@
 .background {
-  background: url(/img/heroImg.png);
+  background: url(/img/heroImg.png), #000;
   background-position: center;
   background-size: cover;
 }
